--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,141 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.hamburger-button {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background: transparent;
+  border: none;
+  font-size: 30px;
+  cursor: pointer;
+  z-index: 1000;
+  color: white;
+}
+
+.hamburger-menu {
+  position: fixed;
+  top: 50px;
+  left: 20px;
+  background: white;
+  border: 1px solid #ccc;
+  padding: 10px;
+  z-index: 999; /* Lower than hamburger-button */
+  color: black;
+  border-radius: 12px;
+  width: 100%;
+  max-width: 400px; /* Adjust as needed */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu h2 {
+  margin-bottom: 10px;
+}
+
+.menu input[type="text"] {
+  margin-bottom: 10px;
+  padding: 5px;
+  font-size: 16px;
+  width: 100%;
+}
+
+.menu input[type="color"] {
+  margin-bottom: 10px;
+}
+
+/* .menu button {
+  padding: 10px;
+  background-color: #af4c4c;
+  color: white;
+  border: none;
+  cursor: pointer;
+} */
+
+.menu ul {
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
+}
+
+.menu ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 0;
+}
+
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(40, 81, 119);
+  margin: auto;
+  width: auto;
+  height: auto;
+  padding: 50px;
+  border-radius: 50px;
+  border: 1px solid white;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  color: #ff0707;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.gradient-text {
+  background: linear-gradient(270deg, #ff6b6b, #feca57, #48dbfb, #1dd1a1, #ff9ff3, #54a0ff);
+  background-size: 1200% 1200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradient-animation 5s ease infinite;
+  font-size: 2rem; /* Adjust as needed */
+  font-weight: bold;
+  text-align: center;
+}
